src/components/LabelsEntities/style.scoped.scss
ul {
    position: absolute;

    display: block;
    top: 0;
    left: 0;
}

li {
    position: absolute;
    top: 0;
    left: 0;

    opacity: 0;
}

.label {
    position: absolute;
    top: 0;
    left: 0;

    width: 1px;
    height: 1px;

    &.left span {
        text-align: right;

        top: rem(-30px, 'large');
        left: rem(-20px, 'large');

        transform: translate(-100%, -50%);

        .ar & {
            transform: translate(0, -50%);
        }
    }

    &.right span {
        top: rem(-30px, 'large');
        left: rem(20px, 'large');

        transform: translate(0, -50%);

        .ar & {
            transform: translate(100%, -50%);
        }
    }

    span {
        position: absolute;

        width: rem(120px, 'large');

        font-size: rem(16px, 'large');
        color: var(--color-theme-secondary);
        line-height: 1;
    }
}

.button {
    display: none;

    position: absolute;
    top: 0;
    left: 0;

    width: 1px;
    height: 1px;

    .button__content {
        position: absolute;

        @include respond-to('large') {
            height: rem(55px, 'large');
        }
    }

    &.left .button__content {
        transform: translate(-100%, 0%);

        .ar & {
            transform: translate(0%, 0%);
        }
    }

    &.right .button__content {
        .ar & {
            transform: translate(100%, 0%);
        }
    }

    .button__icon {
        position: absolute;
        top: 0;
        left: 0;

        border: 1px solid var(--color-theme-secondary);
        border-radius: 50%;

        &:before {
            content: '';

            display: block;
            position: absolute;
            top: 0;
            right: 0;
            bottom: 0;
            left: 0;

            margin: auto;

            background-color: var(--color-theme-secondary);
            border-radius: 50%;

            @include respond-to('large') {
                width: rem(6px, 'large');
                height: rem(6px, 'large');
            }
        }

        @include respond-to('large') {
            width: rem(55px, 'large');
            height: rem(55px, 'large');
        }
    }

    &.left .button__icon {
        left: auto;
        right: 0;
    }

    .button__label {
        display: block;

        text-align: left;
        color: var(--color-theme-secondary);

        @include respond-to('large') {
            padding-left: rem(75px, 'large');

            width: rem(200px, 'large');

            font-size: rem(16px, 'large');
            line-height: rem(48px, 'large');
        }
    }

    &.left .button__label {
        text-align: right;

        @include respond-to('large') {
            padding-right: rem(75px, 'large');
            padding-left: 0;
        }
    }
}

.highlight {
    position: absolute;
    top: 0;
    left: 0;

    width: 1px;
    height: 1px;
}

.highlight__content {
    position: absolute;

    width: rem(120px);

    transform: translate(0%, -100%);

    @include respond-to('large') {
        width: rem(120px, 'large');
    }
}

.highlight__value {
    display: block;

    margin-bottom: rem(12px);

    font-weight: 300;
    font-size: rem(36px);

    @include respond-to('large') {
        margin-bottom: rem(12px, 'large');
        font-size: rem(36px, 'large');
    }
}

.highlight__title {
    display: block;

    line-height: 1;
    font-size: rem(16px);

    @include respond-to('large') {
        font-size: rem(16px, 'large');
    }
}

